# my-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  auto-deploy.sh  deploy.sh  docker-compose.yml  env.example  pyproject.toml  pytest.ini  test_responses_api.py
.claude/skills/test-pi/: SKILL.md
.cursor/rules/: project-rules.mdc
.docker/: Dockerfile
.github/workflows/: build-test-deploy.yml
app/: main.py
app/agents/: __init__.py  alert_processor_agent.py  commute_agent.py  gardener_agent.py  logger_agent.py  notes_agent.py  orchestrator_agent.py  scheduler_agent.py  workout_agent.py
app/agents/commute/: commute_service.py  preferences_service.py
app/agents/gardener/: garden_service.py
app/agents/logger/: location_service.py  logger_service.py
app/agents/notes/: notes_service.py  recipe_parser.py
app/agents/scheduler/: manage_tools.py  tools.py
app/agents/workout/: strava_client.py  workout_service.py
app/core/: agent_response_handler.py  auth.py  conversation_manager.py  logger.py  main_router.py  mcp_client.py  openai_client.py  scheduler.py  session_manager.py  settings.py  task_manager.py  task_store.py  telegram_client.py  timezone_utils.py
app/models/: __init__.py  tasks.py
app/sneakers/: models.py  schema.py  views.py
app/telegram/: __init__.py  bot.py  main.py
app/tests/: test_auth.py  test_mcp_integration.py  test_openai_client.py  test_settings.py  test_telegram_bot.py
app/tests/mcp/: test_server.py
email_sink/: README.md  __init__.py  email_client.py  main.py  models.py  monitor.py  parser.py
my_mcp/: README.md  __init__.py  main.py
my_mcp/commute/: __init__.py  parse_hours.py  tools.py
my_mcp/garden/: __init__.py  models.py  tools.py
my_mcp/utils/: __init__.py  date_utils.py  tools.py
telegram_bot/: bot.py  main.py
terraform/obsidian-vault/: main.tf  outputs.tf  variables.tf
tests/: README.md  conftest.py
tests/integration/: test_async_endpoints.py  test_mcp_integration.py  test_telegram_bot.py
tests/unit/app/: __init__.py  test_agent_response_handler.py  test_agents.py  test_alert_cancellation.py  test_auth.py  test_conversation_manager.py  test_location_service.py  test_logger_service.py  test_notes_agent.py  test_openai_client.py  test_preferences_service.py  test_scheduler.py  test_session_manager.py  test_settings.py  test_strava_client.py  test_task_manager.py  test_task_models.py  test_task_store.py  test_telegram_client.py  test_timezone_utils.py  test_workout_service.py
tests/unit/app/notes/: test_notes_service.py  test_recipe_parser.py
tests/unit/email_sink/: __init__.py  test_models.py  test_monitor.py  test_parser.py
tests/unit/my_mcp/: __init__.py  test_commute_tools.py  test_server.py  test_utils_tools.py
tests/unit/telegram_bot/: __init__.py
