[project]
name = "my-agent"
version = "0.5.0"
description = "My agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.13",
    "fastmcp>=2.10.0",
    "httpx>=0.28.0",
    "loguru>=0.7.3",
    "openai>=1.95",
    "openai-agents>=0.0.12",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.6.1",
    "pytest>=8.4.1",
    "pytz>=2024.1",
    "pytest-asyncio>=0.24.0",
    "python-telegram-bot>=21.0.0",
    "requests>=2.32.4",
    "ruff>=0.12.0",
    "tenacity>=9.1.2",
    "uvicorn>=0.34.3",
]
