[project]
name = "my-agent"
version = "0.9.0"
description = "My agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.13",
    "fastmcp>=2.10.0",
    "httpx>=0.28.0",
    "imapclient>=3.0.1",
    "loguru>=0.7.3",
    "mail-parser>=3.15.0",
    "openai>=1.95",
    "openai-agents>=0.0.12",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.6.1",
    "pytest>=8.4.1",
    "pytz>=2024.1",
    "pytest-asyncio>=0.24.0",
    "python-telegram-bot>=21.0.0",
    "requests>=2.32.4",
    "ruff>=0.12.0",
    "tenacity>=9.1.2",
    "uvicorn>=0.34.3",
    "types-requests>=2.32.4.20250611",
    "types-pytz>=2025.2.0.20250516",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "pytz.*",
    "tests.*",
]
ignore_missing_imports = true
